objects/Opportunity_Competitor__c.object
<CustomObject>
    <description>This object is used to define Opportunity Competitors.</description>
    <fields>
        <fullName>Competitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_txt__c</fullName>
        <label>Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Lookup to Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Competitors</relationshipLabel>
        <relationshipName>Opportunity_Competitors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Strengths__c</fullName>
        <label>Strengths</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Opportunity Competitor</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>Opportunity Competitor</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Competitors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>